change button labels, add back buttons throughout

--- a/src/templates/name.html
+++ b/src/templates/name.html
@@ -1,4 +1,9 @@
 <div class="iapp-panel iapp-name-input-panel active">
+    <div class="iapp-button-small iapp-name-back-button button">
+        <div class="iapp-button-text">
+            Back
+        </div>
+    </div>
     <div class="iapp-content-wrap">
         <h2 class="iapp-name-greeting iapp-panel-text-main"><%=greeting%></h3>
         <h2 class="iapp-name-info iapp-panel-text-main"><%=name_text%></h2>
