--- a/src/style/scss/_buttons.scss
+++ b/src/style/scss/_buttons.scss
@@ -1,5 +1,5 @@
 .button {
-  // background-color: $blue;
+  @include BoxShadowHelper(1);
   border-radius: 50%;
   border: solid 4px white;
   color: white;
@@ -14,6 +14,7 @@
   transition: all .5s;
   width: 5em;
   &:hover{
+    @include BoxShadowHelper(2);
     color: $dark-grey;
     cursor: pointer;
     background-color: white;
@@ -45,3 +46,4 @@
     font-size: 0.75em;
   }
 }
+
