--- a/src/templates/tags.html
+++ b/src/templates/tags.html
@@ -1,4 +1,9 @@
 <div class="iapp-panel iapp-tag-sub1 active">
+    <div class="iapp-button-small iapp-topics-back-button button">
+        <div class="iapp-button-text">
+            Back
+        </div>
+    </div>
     <div class="iapp-content-wrap">
         <h2 class="iapp-section-header iapp-panel-text-main"><%=tag_text%> <%=greeting%></h2>
         <div class="iapp-tag-container">
