--- a/src/templates/video.html
+++ b/src/templates/video.html
@@ -1,4 +1,4 @@
-<div class="iapp-video-back-button button iapp-button-small"><div class="iapp-button-text">Back</div></div>
+<div class="iapp-video-back-button button iapp-button-small"><div class="iapp-button-text">Back to topics</div></div>
 
 <div class="iapp-video-info">
      <% if (userName != "") { %>
@@ -9,9 +9,8 @@
     
     <div class="iapp-video-info-buttons">
         <div class="iapp-video-more-button button iapp-button-large"><div class="iapp-button-text">More Videos</div></div>
-        <div class="iapp-video-topics-button button iapp-button-small"><div class="iapp-button-text">Topics</div></div>
         <div class="iapp-video-discuss-button button iapp-button-small"><div class="iapp-button-text">Share</div></div>
-        <div class="iapp-video-credits-button button iapp-button-small"><div class="iapp-button-text">About</div></div>
+        <div class="iapp-video-credits-button button iapp-button-small"><div class="iapp-button-text">Credits</div></div>
         <div class="iapp-video-play-button button iapp-button-small"><div class="iapp-button-text">Pause</div></div>
         <div class="iapp-video-replay-button button iapp-button-small"><div class="iapp-button-text">Replay</div></div>
         
