add more videos button to people index

--- a/src/style/scss/_indexPanel.scss
+++ b/src/style/scss/_indexPanel.scss
@@ -117,3 +117,27 @@
 .iapp-flipped .iapp-index-close {
     display: none;
 }
+
+.iapp-person-image-wrap {
+    position: relative;
+}
+
+.iapp-person-more-video-button {
+    background-color: none;
+    border: solid 2px white;
+    border-radius: 5px;
+    bottom: 1em;
+    padding: 0.25em;
+    position: absolute;
+    right: 1em;
+    text-transform: uppercase;
+    transition: all 250ms ease;
+    @media(max-width: 600px) {
+        display: none;
+    }
+}
+
+.iapp-person-item:hover .iapp-person-more-video-button {
+    background-color: white;
+    color: $dark-grey;
+}
