adjust size of more videos button

--- a/src/style/scss/_indexPanel.scss
+++ b/src/style/scss/_indexPanel.scss
@@ -130,6 +130,7 @@
     border: solid 2px white;
     border-radius: 5px;
     bottom: 1em;
+    font-size: 0.8em;
     padding: 0.25em;
     position: absolute;
     right: 1em;
