swap color scheme, update data

--- a/src/style/scss/_name.scss
+++ b/src/style/scss/_name.scss
@@ -3,10 +3,10 @@
    // border: none;
    border-image: none;
    border-style: none;
-   border-bottom: solid 4px white;
+   border-bottom: solid 4px $dark-grey;
    // border-radius: 5px;
    box-shadow: none;
-   color: white;
+   color: $dark-grey;
    font-family: "Futura Today Demibold", Arial,sans-serif;
    font-size: 1.2em;
    margin-bottom: 2em;
