--- a/src/style/scss/_share.scss
+++ b/src/style/scss/_share.scss
@@ -1,5 +1,6 @@
 .iapp-share-panel {
     background-color: rgba(50, 50, 50, 0.8);
+    color: white;
     filter: none;
     padding: 2em;
     z-index: 18;
