--- a/src/style/scss/_buttons.scss
+++ b/src/style/scss/_buttons.scss
@@ -1,8 +1,8 @@
 .button {
   @include BoxShadowHelper(1);
   border-radius: 50%;
-  border: solid 4px white;
-  color: white;
+  border: solid 4px $dark-grey;
+  color: $dark-grey;
   font-size: 1em;
   height: 5em;
   line-height: 1.2;
@@ -15,9 +15,9 @@
   width: 5em;
   &:hover{
     @include BoxShadowHelper(2);
-    color: $dark-grey;
+    color: white;
     cursor: pointer;
-    background-color: white;
+    background-color: $dark-grey;
     transition: background-color .5s;
   }
 
