--- a/src/style/scss/_indexPanel.scss
+++ b/src/style/scss/_indexPanel.scss
@@ -11,7 +11,7 @@
 }
 
 .iapp-person-item {
-    background-color: $dark-grey;
+    background-color: $extra-light-grey;
 
     width: 100%;
     @media(min-width: 1200px) {
@@ -36,12 +36,13 @@
     font-size: 1em;
     padding: 0.5em 1em;
     a {
-        color: white;
+        color: $dark-grey;
     }
 }
 
 .iapp-clip-index {
-    background-color: black;
+    background-color: $extra-light-grey;
+    color: white;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -95,6 +96,8 @@
 }
 
 .iapp-index-back-close {
+    border: solid 4px white;
+    color: white;
     height: 60px;
     left: 1em;
     margin: 0;
@@ -130,6 +133,7 @@
     border: solid 2px white;
     border-radius: 5px;
     bottom: 1em;
+    color: white;
     font-size: 0.8em;
     padding: 0.25em;
     position: absolute;
