--- a/src/style/scss/_layout.scss
+++ b/src/style/scss/_layout.scss
@@ -21,8 +21,8 @@ footer { display: none !important;}
 body { min-width: 0 !important; }
 
 article {
-  background: $dark-grey !important;
-  color: white !important;
+  background: $extra-light-grey !important;
+  color: $dark-grey !important;
   height: 100% !important;
   padding: 0 !important;
   width: 100% !important;
@@ -118,7 +118,7 @@ panel positions
   width: 100%;
 }
 
-.iapp-project-title {
+a.iapp-project-title {
   color: white;
   text-decoration: none;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
@@ -126,7 +126,7 @@ panel positions
   text-align: center;
   width: 100%;
   &:hover {
-    color: $medium-grey;
+    color: white
   }
   &:visited {
     color: white;
